update model selection chapter

--- a/header.tex
+++ b/header.tex
@@ -6,7 +6,7 @@
 \def\doccls{mthesis}
 \fi
 
-\documentclass[11pt, hyper, bib, fontset=Minion,
+\documentclass[11pt, hyper, bib, fontset=Cambria,
 biblatexstyle=numeric]{\doccls}
 \input{\rootdir/macros}
 \addbibresource{\rootdir/thesis.bib}
