--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 26 Jun 2013.
+%% Created using Papers on Wed, 03 Jul 2013.
 %% http://papersapp.com/papers/
 
 @article{Richardson:1997ea,
@@ -2181,6 +2181,14 @@ year = {2001},
 pages = {93--106}
 }
 
+@article{Hannan:1979us,
+author = {Hannan, Edward J and Quinn, Barry G},
+title = {{The determination of the order of an autoregression}},
+journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+year = {1979},
+pages = {190--195}
+}
+
 @phdthesis{Fearnhead:1998wj,
 author = {Fearnhead, Paul},
 title = {{Sequential Monte Carlo methods in filter theory}},
@@ -2206,6 +2214,17 @@ year = {2011},
 volume = {6},
 number = {1},
 pages = {49--76}
+}
+
+@article{Sugiura:1978be,
+author = {Sugiura, Nariaki},
+title = {{Further analysts of the data by akaike' s information criterion and the finite corrections}},
+journal = {Communications in Statistics - Theory and Methods},
+year = {1978},
+volume = {7},
+number = {1},
+pages = {13--26},
+month = jan
 }
 
 @book{Robert:2004tn,
