rename model comparison to model selection

--- a/thesis.tex
+++ b/thesis.tex
@@ -17,7 +17,7 @@
 
 \mainmatter
 \input{chap/introduction}
-\input{chap/model-comparison}
+\input{chap/model-selection}
 \input{chap/monte-carlo}
 \input{chap/bayesian-pet}
 \input{chap/bayesian-smc}
