--- a/macros.tex
+++ b/macros.tex
@@ -49,6 +49,7 @@
 \def\calL{\mathcal{La}}
 \def\calM{\mathcal{M}}
 \def\calN{\mathcal{N}}
+\def\bbI{\mathbb{I}}
 
 \def\bbN{\mathbb{N}}
 \def\bbR{\mathbb{R}}
