--- a/thesis.tex
+++ b/thesis.tex
@@ -22,8 +22,8 @@
 \input{chap/bayesian-pet}
 \input{chap/bayesian-smc}
 \input{chap/vsmc}
-\input{chap/applications}
-\input{chap/conclusions}
+% \input{chap/applications}
+% \input{chap/conclusions}
 
 \backmatter
 \printbibliography
