--- a/thesis.tex
+++ b/thesis.tex
@@ -12,16 +12,16 @@
 \begin{document}
 
 \frontmatter
-\maketitle
-\tableofcontents
+% \maketitle
+% \tableofcontents
 
 \mainmatter
-\input{chap/introduction}
-\input{chap/model-selection}
-\input{chap/monte-carlo}
-\input{chap/bayesian-pet}
+% \input{chap/introduction}
+% \input{chap/model-selection}
+% \input{chap/monte-carlo}
+% \input{chap/bayesian-pet}
 \input{chap/bayesian-smc}
-\input{chap/vsmc}
+% \input{chap/vsmc}
 % \input{chap/applications}
 % \input{chap/conclusions}
 
