--- a/thesis.bib
+++ b/thesis.bib
@@ -2354,3 +2354,44 @@ number = {3},
 pages = {263--279}
 }
 
+@Article{Friel:2012,
+  author = 	 {N. Friel and M. Hurn and J. Wyse},
+  title = 	 {Improving power posterior estimation of statistical evidence},
+  journal = 	 {ArXiv},
+  year = 	 {2012},
+  OPTkey = 	 {},
+  volume =	 {1209.3198},
+  OPTnumber = 	 {},
+  pages =	 {1--24},
+  month =	 {September},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@Article{Zhou2013,
+ author = 	 {Y. Zhou and J. A. D. Aston and A. M. Johansen},
+  title = 	 {Bayesian Model Comparison for Compartmental Models with Applications in Positron Emission Tomography},
+  journal = 	 {Journal of Applied Statistics},
+  OPTkey = 	 {},
+  year =	 {2013},
+  month = {May},
+  volume = {40},
+  number = {5},
+  pages = {993--1016},
+  OPTannote = 	 {},
+  doi = {10.1080/02664763.2013.772569}
+}
+
+@TechReport{software:VSMC,
+  author = 	 {Y. Zhou},
+  title = 	 {{vSMC}: Parallel Sequential {M}onte {C}arlo in {C++}},
+  institution =  {ArXiv},
+  year = 	 {2013},
+  OPTkey = 	 {},
+  type =	 {Mathematics e-print},
+  number =	 {1306.5583},
+  OPTaddress = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
