add gmm res result

--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -1,7 +1,7 @@
 \begin{table}
   \begingroup\small\begin{tabularx}{\linewidth}{lRRRRRRR}
     \toprule
-    & \multicolumn{7}{c}{Algorithms} \\
+    & \multicolumn{7}{c}{Algorithm} \\
     \cmidrule(lr){2-8}
     Quantity
     & \smc[2]-\ds & \smc[2]-\ps & \smc[3]-\ds & \smc[3]-\ps & \ais-\ds & \ais-\ps &
