add one more level of toc

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,11 @@
-\documentclass
-[11pt, hyper, bib, fontset=Minion, biblatexstyle=numeric]
-{mthesis}
+\documentclass[
+11pt, fontset=Minion,
+bib, biblatexstyle=numeric,
+toclevel = 3
+]{mthesis}
 
 \input{macros}
-\includeonly{chap/bayesian-smc}
+% \includeonly{chap/bayesian-smc}
 \addbibresource{thesis.bib}
 \author{Yan Zhou}
 \date{\today}
