use new interface of pkgcompg

--- a/macros.tex
+++ b/macros.tex
@@ -1,36 +1,36 @@
-\DeclareAbbr{\aic}{aic}
-\DeclareAbbr{\ais}{ais}
-\DeclareAbbr{\bic}{bic}
-\DeclareAbbr{\bugs}{bugs}
-\DeclareAbbr{\cess}{cess}
-\DeclareAbbr{\cpu}{cpu}
-\DeclareAbbr{\dic}{dic}
-\DeclareAbbr{\ds}{ds}
-\DeclareAbbr{\ess}{ess}
-\DeclareAbbr{\fic}{fic}
-\DeclareAbbr{\fpe}{fpe}
-\DeclareAbbr{\gic}{gic}
-\DeclareAbbr{\gmm}{gmm}
-\DeclareAbbr{\gpu}{gpu}
-\DeclareAbbr{\ic}{ic}
-\DeclareAbbr{\ieee}{ieee}
-\DeclareAbbr{\jags}{jags}
-\DeclareAbbr{\mala}{mala}
-\DeclareAbbr{\mcmc}{mcmc}
-\DeclareAbbr{\mdl}{mdl}
-\DeclareAbbr{\mle}{mle}
-\DeclareAbbr{\mse}{mse}
-\DeclareAbbr{\nic}{nic}
-\DeclareAbbr{\nls}{nls}
-\DeclareAbbr{\ode}{ode}
-\DeclareAbbr{\pet}{pet}
-\DeclareAbbr{\pmcmc}{pmcmc}
-\DeclareAbbr{\ps}{ps}
-\DeclareAbbr{\rjmcmc}{rjmcmc}
-\DeclareAbbr{\sd}{s.d.}
-\DeclareAbbr{\sis}{sis}
-\DeclareAbbr{\tic}{tic}
-\DeclareAbbr{\unix}{unix}
+\UseAbbr[\sd]{s.d.}
+\UseAbbr{aic}
+\UseAbbr{ais}
+\UseAbbr{bic}
+\UseAbbr{bugs}
+\UseAbbr{cess}
+\UseAbbr{cpu}
+\UseAbbr{dic}
+\UseAbbr{ds}
+\UseAbbr{ess}
+\UseAbbr{fic}
+\UseAbbr{fpe}
+\UseAbbr{gic}
+\UseAbbr{gmm}
+\UseAbbr{gpu}
+\UseAbbr{ic}
+\UseAbbr{ieee}
+\UseAbbr{jags}
+\UseAbbr{mala}
+\UseAbbr{mcmc}
+\UseAbbr{mdl}
+\UseAbbr{mle}
+\UseAbbr{mse}
+\UseAbbr{nic}
+\UseAbbr{nls}
+\UseAbbr{ode}
+\UseAbbr{pet}
+\UseAbbr{pmcmc}
+\UseAbbr{ps}
+\UseAbbr{rjmcmc}
+\UseAbbr{sis}
+\UseAbbr{tic}
+\UseAbbr{unix}
 
 \UseMathCal{D}
 \UseMathCal{E}
