--- a/tab/node-c.tex
+++ b/tab/node-c.tex
@@ -1,26 +1,48 @@
 \begin{table}
-  \def\B{\color{MBlue}\it}
-  \def\R{\color{MRed}\bf}
-  \begingroup\small
-    \begin{tabularx}{\linewidth}{lCClCCC}
-      \toprule
-      &&&& \multicolumn{2}{c}{Marginal likelihood} & \\
-      &&&& \multicolumn{2}{c}{($\log p(\paramk|\data)\pm\text{\sd}$)} & \\
-      \cmidrule(lr){5-6}
-      $T$ & Proposal Scales & Annealing Scheme & Algorithm & $m = 3$ & $m = 5$ & Bayes factor $\log B_{5,3}$ \\ \midrule
-      $10 $ & Manual    & Prior (5) & \pmcmc      & $-1651.0\pm27.9$   & $-85.1\pm36.6$   & $1565.9\pm42.1$ \\
-      $30 $ &           &           &             & $\B-1639.7\pm7.4$  & $\B-78.9\pm11.2$ & $\B1560.8\pm12.8$ \\
-      $100$ &           &           &             & $-1624.6\pm15.7$   & $-75.7\pm24.8$   & $1548.9\pm25.6$ \\ \midrule
-      $500$ & Manual    & Prior (5) & \smc2-\ds & $-1640.7\pm10.8$   & $-78.5\pm9.8$    & $1562.2\pm10.1$ \\
-            &           &           & \smc2-\ps & $-1640.8\pm 8.4$   & $-79.2\pm7.9$    & $1561.6\pm 8.5$ \\
-      $500$ & Manual    & Adaptive  & \smc2-\ds & $-1639.7\pm 6.9$   & $-78.6\pm4.8$    & $1561.1\pm7.1$ \\
-            &           &           & \smc2-\ps & $-1640.1\pm 5.4$   & $-78.8\pm3.7$    & $1561.3\pm6.8$ \\
-      $500$ & Adaptive  & Adaptive  & \smc2-\ds & $-1639.8\pm 2.2$   & $-79.4\pm1.7$    & $1560.4\pm3.1$ \\
-            &           &           & \smc2-\ps & $\R-1640.2\pm 1.9$ & $\R-78.5\pm1.5$  & $\R1561.7\pm2.3$ \\
-      \bottomrule
-    \end{tabularx}
-  \endgroup
-  \caption{Results for non-linear \ode models with data generated from complex
-    model. Number {\B italic}: Minimum variance for the same algorithm. {\R Bold}: Minimum variance for all samplers.}
-  \label{tab:node-c-all}
+  \caption{Nonlinear \ode model marginal likelihood and Bayes factor estimates
+    with data generated from simple (three components) model.}
+  \label{tab:node-c}
+  \begin{tabu}{X[1l]X[2c]X[2c]X[2c]X[4r]X[4r]X[6r]}
+    \toprule
+    &&&& \multicolumn{2}{c}{Marginal likelihood ($\log p(\data|\Mk)\pm\sd$)} & Bayes factor ($\log B_{3,5}\pm\sd$) \\
+    \cmidrule(lr){5-6}
+    $T$   & Proposal & Annealing & Algorithm   & $m = 3$                 & $m = 5$                & \\ \midrule
+    $10 $ & Manual   & Prior (5) & \pmcmc      & $-1651.0\pm27.9$        & $-85.1\pm36.6$         & $1565.9\pm42.1$ \\
+    $30 $ &          &           &             & $\SubBest-1639.7\pm7.4$ & $\SubBest-78.9\pm11.2$ & $\SubBest1560.8\pm12.8$ \\
+    $100$ &          &           &             & $-1624.6\pm15.7$        & $-75.7\pm24.8$         & $1548.9\pm25.6$ \\ \midrule
+    $500$ & Manual   & Prior (5) & \smc[2]-\ds & $-1640.7\pm10.8$        & $-78.5\pm9.8$          & $1562.2\pm10.1$ \\
+          &          &           & \smc[2]-\ps & $-1640.8\pm 8.4$        & $-79.2\pm7.9$          & $1561.6\pm 8.5$ \\
+    $500$ & Manual   & Adaptive  & \smc[2]-\ds & $-1639.7\pm 6.9$        & $-78.6\pm4.8$          & $1561.1\pm7.1$ \\
+          &          &           & \smc[2]-\ps & $-1640.1\pm 5.4$        & $-78.8\pm3.7$          & $1561.3\pm6.8$ \\
+    $500$ & Adaptive & Adaptive  & \smc[2]-\ds & $-1639.8\pm 2.2$        & $-79.4\pm1.7$          & $1560.4\pm3.1$ \\
+          &          &           & \smc[2]-\ps & $\Best-1640.2\pm 1.9$   & $\Best-78.5\pm1.5$     & $\Best1561.7\pm2.3$ \\
+    \bottomrule
+    \multicolumn{7}{r}{%
+      \begin{minipage}{\linewidth-2em}\vskip1ex\sffamily
+        $T$: The number of distributions. That is, the number parallel \mcmc
+        chains for \pmcmc algorithm and the number of iterations for the \smc
+        algorithm. For the \pmcmc algorithm, at each iteration, a single \mcmc
+        chain is chosen randomly to be updated. There is a 50,000 iterations
+        burin period and another 10,000 iterations are used for inference. For
+        the \smc algorithm, 1,000 particles are used.
+
+        Proposal: The proposal scales of the \mcmc kernels. The ``Manual''
+        proposal is manually tuned such that the accept rates fall between
+        $[0.2, 0.6]$. The ``Adaptive'' proposal is dynamically set using
+        moments estimates from the last iteration of the particle system.
+
+        Annealing: The annealing scheme of the distributions, $\alpha(t/T_k)$
+        in Equation~\ref{eq:geometry_2}. The ``Prior (5)'' scheme is
+        concentrated around the prior distribuiton, with $\alpha(t/T_k) =
+        (t/T_k)^5$. The ``Adaptive'' scheme set $\alpha$ dynamically such that
+        for each iteration, \cess is a constant. The constant value of \cess
+        is chosen such that on average, 500 iterations was produced.
+
+        \Best: The estimate with the smallest variance among all algorithms
+        settings.
+
+        \SubBest: The estimate with the smallest variance for a single
+        algorithm (\smc[2] or \pmcmc) among different settings.
+      \end{minipage}}
+  \end{tabu}
 \end{table}
