--- a/thesis.tex
+++ b/thesis.tex
@@ -1,16 +1,10 @@
-\documentclass[
-11pt, fontset=Minion,
-bib, biblatexstyle=numeric,
-toclevel = 3
+\documentclass[11pt, fontset=Minion, bib, biblatexstyle=numeric, toclevel = 3
 ]{mthesis}
-
 \input{macros}
-% \includeonly{chap/bayesian-smc}
 \addbibresource{thesis.bib}
+\title{Bayesian Model Comparison \\with Sequential Monte Carlo}
 \author{Yan Zhou}
 \date{\today}
-
-\title{Bayesian Model Comparison \\with Sequential Monte Carlo}
 
 \begin{document}
 
