--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -1,20 +1,19 @@
 \begin{table}
-  \begingroup\small\begin{tabularx}{\linewidth}{lRRRRRRR}
+  \caption{Gaussian mixture model Bayes factor estimates obtained via \smc[2],
+    \smc[3], \ais and \pmcmc}
+  \label{tab:gmm-pair}
+  \begin{tabu}{X[1.2l]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]}
     \toprule
     & \multicolumn{7}{c}{Algorithm} \\
     \cmidrule(lr){2-8}
     Quantity
-    & \smc[2]-\ds & \smc[2]-\ps & \smc[3]-\ds & \smc[3]-\ps & \ais-\ds & \ais-\ps &
-    \pmcmc \\
+    & \smc[2]-\ds & \smc[2]-\ps & \smc[3]-\ds & \smc[3]-\ps
+    & \ais-\ds & \ais-\ps & \pmcmc \\
     \midrule
     $\log B_{4,5}$
     & $2.15$ & $2.15$ & $2.16$ & $2.21$ & $2.16$ & $2.17$ & $2.63$ \\
     \sd
-    & $0.25$ & $\color{MRed}{0.22}$
-    & $0.61$ & $0.62$ & $1.12$ & $1.10$ & $0.41$ \\
+    & $0.25$ & $\Best0.22$ & $0.61$ & $0.62$ & $1.12$ & $1.10$ & $0.41$ \\
     \bottomrule
-  \end{tabularx}\endgroup
-  \caption{Gaussian mixture model estimates obtained via \smc[2], \smc[3], \ais
-    and \pmcmc}
-  \label{tab:gmm-pair}
+  \end{tabu}
 \end{table}
