--- a/tab/gmm-prob.tex
+++ b/tab/gmm-prob.tex
@@ -1,20 +1,21 @@
 \begin{table}
-  \begingroup\small\begin{tabularx}{\linewidth}{llCCCCCCC}
-    \toprule
-    & & \multicolumn{7}{c}{Number of components} \\
-    \cmidrule(lr){3-9}
-    Algorithm & Quantity & $\le2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $\ge8$ \\
-    \midrule
-    \smc[1]  & $\Prob(M = \Mk)$
-    & $0$ & $0.00257$ & $0.886$ & $0.103$ & $0.00715$ & $0.00128$ & $0$ \\
-    & $\log B_{4,k}$
-    & $\infty$ & $5.84$ & $0$ & $2.15$ & $4.82$ & $6.54$ & $\infty$ \\
-    \rjmcmc  & $\Prob(M = \Mk)$
-    & $0$ & $0.000526$ & $0.887$ & $0.103$ & $0.00623$ & $0.00324$ & $0$ \\
-    & $\log B_{4,k}$
-    & $\infty$ & $6.56$ & $0$ & $2.15$ & $4.96$ & $5.61$ & $\infty$ \\
-    \bottomrule
-  \end{tabularx}\endgroup
-  \caption{Gaussian mixture model estimates obtained via \smc[1] and \rjmcmc}
-  \label{tab:gmm-rj}
+    \caption{Gaussian mixture model posterior model probability estimates
+      obtained via \smc[1] and \rjmcmc}
+    \label{tab:gmm-prob}
+    \begin{tabu}{X[2l]X[2l]X[1c]X[1c]X[1c]X[1c]X[1l]X[1c]X[1c]}
+      \toprule
+      & & \multicolumn{7}{c}{Number of components} \\
+      \cmidrule(lr){3-9}
+      Quantity & Algorithm & $\le2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $\ge8$ \\
+      \midrule
+      $\Prob(\Mk|\data)$ & \smc[1]
+      & $0$ & $0.0022$ & $0.89$ & $0.10$ & $0.0064$ & $0.0014$ & $0$ \\
+                         & \rjmcmc
+      & $0$ & $0.0013$ & $0.89$ & $0.10$ & $0.0062$ & $0.0025$ & $0$ \\
+      $\log B_{4,k}$     & \smc[1]
+      & $\infty$ & $6.00$ & $0$ & $2.15$ & $4.93$ & $6.45$ & $\infty$ \\
+                         & \rjmcmc
+      & $\infty$ & $6.53$ & $0$ & $2.15$ & $4.97$ & $5.87$ & $\infty$ \\
+      \bottomrule
+    \end{tabu}
 \end{table}
