move old tables to pieces

--- a/tab/pet-bf.tex
+++ b/tab/pet-bf.tex
@@ -40,7 +40,7 @@
     parallelized.  \smc with $N = 960$ are $N/5$-way parallelized. {\B
       Italic}: Minimum variance for the same computational cost and the same schedule.
     {\R Bold}: Minimum variance for the same computational cost and all schedules.}
-  \label{tab:pet-bf-par-sel}
+  \label{tab:pet-bf}
 \end{table}
 
 
