--- a/tab/pet-bias.tex
+++ b/tab/pet-bias.tex
@@ -19,7 +19,7 @@
   \caption{Path sampling estimator of marginal likelihood of two components
     \pet model. The estimator was approximated using samples from \smc[2]
     algorithm with 1,000 particles and 20 iterations, with different numerical
-    integration strategies. Large sample result (see
-    Table~\ref{tab:pet-py-par-sel}) provide an estimate of $-39.2$.}
-  \label{tab:pet-py-bias-reduction}
+    integration strategies. Large sample result (see Table~\ref{tab:pet-py})
+    provide an estimate of $-39.2$.}
+  \label{tab:pet-bias}
 \end{table}
