--- a/tab/pet-py.tex
+++ b/tab/pet-py.tex
@@ -41,7 +41,7 @@
       Italic}: Minimum variance for the same computational cost and the same proposal
     scales and annealing schemes.  {\R Bold}: Minimum variance for the same computaitonal
     cost and all proposal scales and annealing schemes.}
-  \label{tab:pet-py-par-sel}
+  \label{tab:pet-py}
 \end{table}
 
 % & & $ -39.1\pm  0.56$ & $-926.8\pm376.99$ &&& \\
