add code for vsmc chapter

--- a/macros.tex
+++ b/macros.tex
@@ -91,3 +91,6 @@
 \def\Best{\ifmmode\color{MRed}\else\textcolor{MRed}{\sffamily Red}\fi}
 \def\SubBest{\ifmmode\color{MGreen}\it\else\textcolor{MGreen}{\sffamily
     Green}\fi}
+
+\newminted{cpp}{}
+\usemintedstyle{solarizedlight}
