--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,5 @@
-\documentclass[11pt, fontset=Minion, bib, biblatexstyle=numeric, toclevel = 3
-]{mthesis}
+\documentclass[11pt, fontset=Minion, mintcode, bib, showoverfull
+biblatexstyle=numeric]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
 \title{Bayesian Model Comparison \\with Sequential Monte Carlo}
