--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, fontset=Minion, mintcode, bib, showoverfull
+\documentclass[11pt, fontset=Minion, mintcode, bib, showoverfull,
 biblatexstyle=numeric]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
@@ -6,7 +6,7 @@ biblatexstyle=numeric]{mthesis}
 \author{Yan Zhou}
 \date{\today}
 
-\includeonly{chap/vsmc}
+% \includeonly{chap/vsmc}
 
 \begin{document}
 
