use new minted package

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,12 +1,12 @@
-\documentclass[11pt, fontset=Minion, mintcode, bib, showoverfull,
-biblatexstyle=numeric]{mthesis}
+\documentclass[11pt, fontset=Minion, showoverfull,
+bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
 \title{Bayesian Model Comparison \\with Sequential Monte Carlo}
 \author{Yan Zhou}
 \date{\today}
 
-% \includeonly{chap/vsmc}
+\includeonly{chap/vsmc}
 
 \begin{document}
 
