update vsmc parallel computing

--- a/macros.tex
+++ b/macros.tex
@@ -3,7 +3,10 @@
 \UseAbbr{ais}
 \UseAbbr{bic}
 \UseAbbr{cess}
+\UseAbbr{cmos}
+\UseAbbr{cuda}
 \UseAbbr{cpu}
+\UseAbbr{dag}
 \UseAbbr{dic}
 \UseAbbr{ds}
 \UseAbbr{ess}
@@ -101,6 +104,7 @@
 \def\icpc{\textsf{Intel C++ Composer XE}\xspace}
 \def\iocl{\textsf{Intel OpenCL}\xspace}
 \def\libcpp{\textsf{libc++}\xspace}
+\def\mkl{\textsf{Intel MKL}\xspace}
 \def\msvc{\textsf{Microsoft Visual C++}\xspace}
 \def\opencl{\textsf{OpenCL}\xspace}
 \def\openmp{\textsf{OpenMP}\xspace}
@@ -110,7 +114,6 @@
 \def\vsmc{\textsf{vSMC}\xspace}
 
 \usemintedstyle{solarizedlight}
-
 \newmintedfile{cpp}{mathescape}
 
 \newminted{cpp}{}
