--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,7 @@
 bib, biblatexstyle=numeric, mintcode, minted=cache]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
+\addbibresource{extra.bib}
 \title{Bayesian Model Comparison \\with Sequential Monte Carlo}
 \author{Yan Zhou}
 \date{\today}
