--- a/macros.tex
+++ b/macros.tex
@@ -94,16 +94,20 @@
 \def\cppoo{{\allcapt C++11}\xspace}
 
 \def\aocl{\textsf{AMD APP OpenCL}\xspace}
+\def\boost{\textsf{Boost}\xspace}
 \def\bugs{\textsf{\textsc{bugs}}\xspace}
 \def\cilk{\textsf{Intel Cilk Plus}\xspace}
+\def\clangstatic{\textsf{Clang Static Analyzer}\xspace}
 \def\clang{\textsf{Clang}\xspace}
 \def\cmake{\textsf{CMake}\xspace}
 \def\gcc{\textsf{GCC}\xspace}
 \def\git{\textsf{Git}\xspace}
 \def\html{\textsf{\textsc{html}}\xspace}
 \def\icpc{\textsf{Intel C++ Composer XE}\xspace}
+\def\inspector{\textsf{Intel Inspector XE}\xspace}
 \def\iocl{\textsf{Intel OpenCL}\xspace}
 \def\libcpp{\textsf{libc++}\xspace}
+\def\lldb{\textsf{\textsc{lldb}}\xspace}
 \def\mkl{\textsf{Intel MKL}\xspace}
 \def\msvc{\textsf{Microsoft Visual C++}\xspace}
 \def\opencl{\textsf{OpenCL}\xspace}
